Исправил замечания по 16 дз